--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                                         <li>Date <span>2024 May</span></li>
 
                                         <li>Tools <span>html, css, javascript</span></li>
-                                        <li>Web <span><a href="#">www.roushan-cv.netlify.app</a></span></li>
+                                        <li>Web <span><a href="https://roushan-cv.netlify.app/">https://roushan-cv.netlify.app/</a></span></li>
                                     </ul>
                                 </div>
                             </div>
