--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="row">
                 <div class="about-tabs">
                     <span class="tab-item outer-shadow active" data-target=".skills">skills</span>
-                    <span class="tab-item" data-target=".experience">experience</span>
+                    <!-- <span class="tab-item" data-target=".experience">experience</span> -->
                     <span class="tab-item" data-target=".education">education</span>
                 </div>
             </div>
@@ -301,57 +301,7 @@
         <!-- skills endd -->
 
         <!-- experience start -->
-        <div class="row">
-            <div class="experience tab-content">
-                <div class="row">
-                    <div class="timeline">
-                        <div class="row">
-                            <!-- timelime item start -->
-                            <div class="timeline-item">
-                                <div class="timeline-item-inner outer-shadow">
-                                    <i class="fas fa-briefcase icon"></i>
-                                    <span>June, 2021 -
-                                        present</span>
-                                    <h3>Head of Content</h3>
-                                    <h4>Recode Hive</h4>
-                                    <span>Full-Time</span>
-                                    <p>- Tech Content Creator - Focused on Data Science & Data Analysis.<br> - Delivered
-                                        50+ talks ML, Data Science, Open source contributions.<br>
-                                        - Online Course on Data Analysis, Building Websites, Digital Marketing.</p>
-                                </div>
-                            </div>
-                            <div class="timeline-item">
-                                <div class="timeline-item-inner outer-shadow">
-                                    <i class="fas fa-briefcase icon"></i>
-                                    <span>Sep, 2018 -
-                                        May, 2021</span>
-                                    <h3>Software Engineer</h3>
-                                    <h4>LTI - Larsen & Toubro Infotech</h4>
-                                    <span>Full-Time</span>
-                                    <p> Developed over 110+ B2B and 20+ A2A interfaces for migration projects.<br>
-                                        - Completed 5 Projects, +created Inventory soft, automation tool to improve Team
-                                        Productivity.</p>
-                                </div>
-                            </div>
-                            <div class="timeline-item">
-                                <div class="timeline-item-inner outer-shadow">
-                                    <i class="fas fa-briefcase icon"></i>
-                                    <span>June, 2018 -
-                                        July, 2018</span>
-                                    <h3>Full Stack Developer & SEO Consultant</h3>
-                                    <h4>Righttway</h4>
-                                    <span>Freelance</span>
-                                    <p>- Created Domain, Hosting, and Designed Company website</br>
-                                        - Managed SEO, Google Analytics, helped to get 10k new Customers</br>
-                                        - Created & Managed Google My Business for Righttway, Marketing Campaigns.</p>
-                                </div>
-                            </div>
-                            <!-- timelime item end -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
         <!-- experience end -->
 
         <!-- education start -->
